--- a/PracticeGame1/PracticeGame1.CSharp.csproj
+++ b/PracticeGame1/PracticeGame1.CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Resources\Scripts\Managers\ScreenManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\UIManager.cs" />
     <Compile Include="Assets\Resources\Scripts\MonoBehaviourSingleton.cs" />
+    <Compile Include="Assets\Resources\Scripts\UI\MainMenuScreenManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Cameras\CameraGuidelines.txt" />
