Got the options popup to close on command now and created a helper function in my UIManager script for all future popups to use in order to close them.

--- a/PracticeGame1/PracticeGame1.CSharp.csproj
+++ b/PracticeGame1/PracticeGame1.CSharp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Assets\Resources\Scripts\Managers\UIManager.cs" />
     <Compile Include="Assets\Resources\Scripts\MonoBehaviourSingleton.cs" />
     <Compile Include="Assets\Resources\Scripts\UI\MainMenuScreenManager.cs" />
+    <Compile Include="Assets\Resources\Scripts\UI\OptionsPopupManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Cameras\CameraGuidelines.txt" />
