--- a/PracticeGame1/PracticeGame1.CSharp.csproj
+++ b/PracticeGame1/PracticeGame1.CSharp.csproj
@@ -72,12 +72,14 @@
     <Compile Include="Assets\Resources\Scripts\DummyScript.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\BuildingManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\BuildingSpawnerManager.cs" />
+    <Compile Include="Assets\Resources\Scripts\Gameplay\PlayerCollisionsManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\GameStartupManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\GameplayManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\ScreenManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\UIManager.cs" />
     <Compile Include="Assets\Resources\Scripts\MonoBehaviourSingleton.cs" />
     <Compile Include="Assets\Resources\Scripts\UI\Overlays\GameplayHudManager.cs" />
+    <Compile Include="Assets\Resources\Scripts\UI\Popups\GameOverPopup.cs" />
     <Compile Include="Assets\Resources\Scripts\UI\Popups\OptionsPopupManager.cs" />
     <Compile Include="Assets\Resources\Scripts\UI\Screens\MainMenuScreenManager.cs" />
     <Compile Include="Assets\Resources\Scripts\UI\Screens\PauseGameplayScreenManager.cs" />
