Deleted legacy scripts and updated the BuildingManager script to be the GenericObstacleManager script. Integrated the Hill prefab into the obstacles that are spawned and made the obstacles spawned randomly iterate between all listed obstacles in the ObstacleSpawnerManager script.

--- a/PracticeGame1/PracticeGame1.CSharp.csproj
+++ b/PracticeGame1/PracticeGame1.CSharp.csproj
@@ -94,11 +94,10 @@
     <Compile Include="Assets\GUI Animator\GUI Animator FREE\Demo (CSharp)\Scripts\GA_FREE_OpenOtherScene.cs" />
     <Compile Include="Assets\GUI Animator\GUI Animator FREE\Demo Basic (CSharp)\Scripts\GUIAnimatorFREEDemo.cs" />
     <Compile Include="Assets\Resources\Scripts\DummyScript.cs" />
-    <Compile Include="Assets\Resources\Scripts\Gameplay\BuildingManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\MovingRoadTexture.cs" />
-    <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnerManager.cs" />
+    <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\GenericObstacleManager.cs" />
+    <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\ObstacleSpawnerManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\PlayerCollisionsManager.cs" />
-    <Compile Include="Assets\Resources\Scripts\Gameplay\TestSpawnScripts\BuildingSpawnerManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\AudioManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\GameStartupManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\GameplayManager.cs" />
