Added a simple Arrow model to the project that I modeled in Unity and created a BaseProjectileManager script for standard projectile to make them "fire" and fly at a fast speed and then destroy behind the player's POV. Also created an ArcherObstacleManager class and an ArcherAI prefab that is a new obstacle that shoots these arrow projectiles every 3 seconds. If a projectile arrow hits the player, the player loses and is informed in the GameOver Popup that he/she was hit by an archer's arrow.

--- a/PracticeGame1/PracticeGame1.CSharp.csproj
+++ b/PracticeGame1/PracticeGame1.CSharp.csproj
@@ -94,7 +94,9 @@
     <Compile Include="Assets\GUI Animator\GUI Animator FREE\Demo (CSharp)\Scripts\GA_FREE_OpenOtherScene.cs" />
     <Compile Include="Assets\GUI Animator\GUI Animator FREE\Demo Basic (CSharp)\Scripts\GUIAnimatorFREEDemo.cs" />
     <Compile Include="Assets\Resources\Scripts\DummyScript.cs" />
+    <Compile Include="Assets\Resources\Scripts\Gameplay\BaseProjectileManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\MovingRoadTexture.cs" />
+    <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\ArcherObstacleManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\GenericObstacleManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\ObstacleSpawnerManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\PlayerCollisionsManager.cs" />
