Performed a quick fix to make the rotations of the enemy AI face the player instead of away from the player. Added a GameplayPrefabManager script that attaches to the GameplayPrefab prefab GameObject and finds all of the alterable variables within it and stores them as variables for use anytime the script is called on.

--- a/PracticeGame1/PracticeGame1.CSharp.csproj
+++ b/PracticeGame1/PracticeGame1.CSharp.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Assets\GUI Animator\GUI Animator FREE\Demo Basic (CSharp)\Scripts\GUIAnimatorFREEDemo.cs" />
     <Compile Include="Assets\Resources\Scripts\DummyScript.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\BaseProjectileManager.cs" />
+    <Compile Include="Assets\Resources\Scripts\Gameplay\GameplayPrefabManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\MovingRoadTexture.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\ArcherObstacleManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\GenericObstacleManager.cs" />
