Shrunk the Road path to half the size it was before and made it so that only five obstacles appear per row of obstacles. Created an InfiniteRunnerPlayerController script component and attached it to the playable character. This replaces the old controller that I was using that was a default Unity asset and as such I disabled the old controller on the player but left it on. The InfiniteRunnerPlayerController script is still very basic and just has simple movement controls for now and no animations. There are now five movement lanes which I added that coincide with the rows that obstacles can be spawned on. The new player controller script lerps between these when player presses left or right arrow buttons and jumps when the player presses the space bar.

--- a/PracticeGame1/PracticeGame1.CSharp.csproj
+++ b/PracticeGame1/PracticeGame1.CSharp.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\GenericObstacleManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\ObstacleSpawnScripts\ObstacleSpawnerManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Gameplay\PlayerCollisionsManager.cs" />
+    <Compile Include="Assets\Resources\Scripts\Gameplay\PlayerControls\InfiniteRunnerPlayerController.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\AudioManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\GameStartupManager.cs" />
     <Compile Include="Assets\Resources\Scripts\Managers\GameplayManager.cs" />
